--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GyroscopeActivity"></activity>
-        <activity android:name=".AcelerometerActivity" />
+        <activity android:name=".ProximityActivity"></activity>
+        <activity android:name=".GyroscopeActivity" />
+        <activity android:name=".AccelerometerActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
