--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProximityActivity"></activity>
+        <activity android:name=".LightnessActivity"></activity>
+        <activity android:name=".ProximityActivity" />
         <activity android:name=".GyroscopeActivity" />
         <activity android:name=".AccelerometerActivity" />
         <activity android:name=".MainActivity">
